# Compi

./: .gitignore  README.md  docker-compose.yml
.kiro/specs/compi-training-platform/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0da7a4e98f61_initial_schema.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/models/: __init__.py  auth.py  domain.py  periodization.py  workout.py
backend/app/providers/: base.py  huawei.py  mapping.py  mock.py  selection.py
backend/app/repositories/: plan_repo.py  token_repo.py  workout_repo.py
backend/app/routers/: auth.py  metrics.py  plans.py  schemas.py  workouts.py
backend/app/services/: compare_service.py  dedup.py  metrics_service.py  plan_service.py  progression_service.py  sync_service.py  token_refresh.py
backend/tests/: test_api.py  test_huawei_integration.py  test_mapping_properties.py  test_metrics_properties.py  test_models.py  test_periodization_properties.py  test_provider_properties.py  test_repositories.py  test_setup.py  test_sync_integration.py  test_sync_properties.py
frontend/: .env.example  .npmrc  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/public/: manifest.json  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/plan/: page.tsx
frontend/src/app/workouts/[id]/: page.tsx
frontend/src/components/: Nav.tsx
